--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>    
     <title>Weather App </title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     </head>
 <body>
        <div class="container">
@@ -11,7 +11,7 @@
         <div class="notification"></div>
         <div class="weather-container">
             <div class="weather-icon">
-                <img src="/unknown.png" alt="">
+                <img src="unknown.png" alt="">
             </div>
             <div class="temperature-value">
                 <p>- °<span>C</span></p>
@@ -25,6 +25,6 @@
         </div>
     </div>
     
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
